HOCS-5946 Initial work to refactor workstacks to use JPA read only queries to improve performance and move away from the StageWithCaseData view.
- Move Workstack specific code to new services and resources
- Use JPA Fetch queries instead of calling StageWithData View
- Use Workstack specific entities to enable using Fetch queries which require the @ID to be on the key used in foreign constraints
- Use CaseData as the root class rather than Stage - refactor of Contributions and Policies